fixing find bar z-index issue

--- a/src/FindBar/style.css
+++ b/src/FindBar/style.css
@@ -1,5 +1,5 @@
 .veFindBar {
-  z-index: 20;
+  z-index: 20000;
   border-bottom: 1px solid lightgrey;
   border-left: 1px solid lightgrey;
   border-right: 1px solid lightgrey;
